--- a/softProject/softProjectTest01/pom.xml
+++ b/softProject/softProjectTest01/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>softProject</artifactId>
+    <artifactId>softProjectTest01</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
